# play_chicken

./: .dockerignore  .gitignore  .solhint.json  Anchor.toml  CHANGELOG.md  Cargo.toml  DeveloperEnv.dockerfile  Dockerfile  README.md  foundry.toml  package-lock.json  package.json  remappings.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-analyzers.yml  commit-lint.yml  forge-ci.yml  mythril.yml  sepolia-testnet.yml  slither.yml  solana-ci.yml  solana-program.yml  yamlfmt.yml
contracts/: AddressSet.sol  ChickenLauncher.sol  ChickenLiquidityPricer.sol  ChickenTokenUpgradeable.sol  FixedPointMath.sol  LiquidityPricer.sol  PlayChicken.sol  PriceTable.sol  RewardChicken.sol  TokenMath.sol
notebook/: ChickenLiquidity.ipynb
script/: ChickenLauncher.s.sol  PlayChicken.s.sol  RewardChicken.s.sol
solana-program/: Cargo.toml
solana-program/src/: error.rs  state.rs
solana-program/src/actions/: claim_fees.rs  deposit.rs  mod.rs  remove_pool.rs  withdraw.rs
solana-program/tests/: common.rs  withdraw.rs
solana-programs/chicken-pools/: Cargo.toml
solana-programs/chicken-pools/src/: assertions.rs  error.rs  lib.rs  state.rs
solana-programs/chicken-pools/src/actions/: claim_fees.rs  deposit.rs  init.rs  mod.rs  remove_pool.rs  withdraw.rs
solana-programs/chicken-pools/tests/: common.rs  deposit.rs  init.rs  withdraw.rs
solana-programs/volumizer/: Cargo.toml
test/: AddressSet.t.sol  ChickenLauncher.t.sol  ChickenLiquidityPricer.t.sol  ERC20Mock.sol  FixedPointMath.t.sol  LiquidityPricer.t.sol  PlayChicken.t.sol  PriceTable.t.sol  RewardChicken.t.sol  TokenMath.t.sol
