[package]
name = "chicken"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
description = "Solana program for the chicken pools game"
publish = false
overflow-checks = true


[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bytemuck = "1.19.0"
anchor-lang = {git = "https://github.com/coral-xyz/anchor", features = ["derive", "init-if-needed"]}
anchor-spl = {git = "https://github.com/coral-xyz/anchor"}
solana-program = "2.1.0"

[dev-dependencies]
litesvm = {git = "https://github.com/litesvm/litesvm"}
test-log = "0.2.16"
solana-sdk = "2.1.0"
anyhow = "1.0.71"
litesvm-token = {git = "https://github.com/litesvm/litesvm"}
borsh = "0.10.3"
rand = "0.8.5"