[package]
name = "chicken"
version = "0.0.1"
edition = "2021"
license = "UNLICENSED"
description = "Solana program for the chicken pools game"
publish = false
overflow-checks = true


[lib]
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
pinocchio-pubkey = { version = "0.2.1" }
pinocchio = { version = "0.6.0" }
pinocchio-token = { version = "0.2.0" }
pinocchio-system = { version = "0.2.0" }
bytemuck = { version = "1.19.0", features = ["derive"] }
shank = { version = "0.4.2", git = "https://github.com/anagrambuild/shank" }
thiserror = "2.0.3"
borsh = { version = "1.5.3", features = ["derive"]}

[dev-dependencies]
litesvm = "0.3.0"
test-log = "0.2.16"
solana-sdk = "=2.0.20"
anyhow = "1.0.94"
litesvm-token = "0.3.0"
borsh = "1.5.3"
rand = "0.8.5"
spl-associated-token-account-client = "1.0.0"